// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render a loader & a disabled button  1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    disabled={true}
    isLoading={true}
    label="test"
    onPress={[MockFunction]}
    type="Secondary"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "activeOpacity": 0.6,
      "children": <ActivityIndicator
        animating={true}
        color="rgb(226,1,119)"
        hidesWhenStopped={true}
        size="small"
      />,
      "disabled": true,
      "onPress": [MockFunction],
      "style": Object {
        "borderColor": "rgb(226,1,119)",
        "borderRadius": 100,
        "borderWidth": 2,
        "height": 100,
        "justifyContent": "center",
        "width": 612,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "animating": true,
        "color": "rgb(226,1,119)",
        "hidesWhenStopped": true,
        "size": "small",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeOpacity": 0.6,
        "children": <ActivityIndicator
          animating={true}
          color="rgb(226,1,119)"
          hidesWhenStopped={true}
          size="small"
        />,
        "disabled": true,
        "onPress": [MockFunction],
        "style": Object {
          "borderColor": "rgb(226,1,119)",
          "borderRadius": 100,
          "borderWidth": 2,
          "height": 100,
          "justifyContent": "center",
          "width": 612,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "animating": true,
          "color": "rgb(226,1,119)",
          "hidesWhenStopped": true,
          "size": "small",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Button should render a loader for a non-primary button  1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    isLoading={true}
    label="test"
    onPress={[MockFunction]}
    type="Secondary"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "activeOpacity": 0.6,
      "children": <ActivityIndicator
        animating={true}
        color="rgb(226,1,119)"
        hidesWhenStopped={true}
        size="small"
      />,
      "disabled": undefined,
      "onPress": [MockFunction],
      "style": Object {
        "borderColor": "rgb(226,1,119)",
        "borderRadius": 100,
        "borderWidth": 2,
        "height": 100,
        "justifyContent": "center",
        "width": 612,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "animating": true,
        "color": "rgb(226,1,119)",
        "hidesWhenStopped": true,
        "size": "small",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeOpacity": 0.6,
        "children": <ActivityIndicator
          animating={true}
          color="rgb(226,1,119)"
          hidesWhenStopped={true}
          size="small"
        />,
        "disabled": undefined,
        "onPress": [MockFunction],
        "style": Object {
          "borderColor": "rgb(226,1,119)",
          "borderRadius": 100,
          "borderWidth": 2,
          "height": 100,
          "justifyContent": "center",
          "width": 612,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "animating": true,
          "color": "rgb(226,1,119)",
          "hidesWhenStopped": true,
          "size": "small",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Button should render a loader for a primary button  1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    isLoading={true}
    label="test"
    onPress={[MockFunction]}
    type="Primary"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <View
          style={
            Object {
              "backgroundColor": "#95012b",
              "borderRadius": 100,
              "height": 100,
              "justifyContent": "center",
              "paddingHorizontal": 170,
              "position": "absolute",
              "top": 8,
              "width": 612,
            }
          }
        />,
        <TouchableWithoutFeedback
          accessibilityLabel="enabled"
          onPressIn={[Function]}
          onPressOut={[Function]}
        >
          <View
            style={
              Object {
                "backgroundColor": "#e20177",
                "borderRadius": 100,
                "height": 100,
                "justifyContent": "center",
                "width": 612,
              }
            }
          >
            <ActivityIndicator
              animating={true}
              color="white"
              hidesWhenStopped={true}
              size="small"
            />
          </View>
        </TouchableWithoutFeedback>,
        null,
      ],
      "style": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": null,
          "style": Object {
            "backgroundColor": "#95012b",
            "borderRadius": 100,
            "height": 100,
            "justifyContent": "center",
            "paddingHorizontal": 170,
            "position": "absolute",
            "top": 8,
            "width": 612,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "accessibilityLabel": "enabled",
          "children": <View
            style={
              Object {
                "backgroundColor": "#e20177",
                "borderRadius": 100,
                "height": 100,
                "justifyContent": "center",
                "width": 612,
              }
            }
          >
            <ActivityIndicator
              animating={true}
              color="white"
              hidesWhenStopped={true}
              size="small"
            />
          </View>,
          "disabled": undefined,
          "onPressIn": [Function],
          "onPressOut": [Function],
          "testID": undefined,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <ActivityIndicator
              animating={true}
              color="white"
              hidesWhenStopped={true}
              size="small"
            />,
            "style": Object {
              "backgroundColor": "#e20177",
              "borderRadius": 100,
              "height": 100,
              "justifyContent": "center",
              "width": 612,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "animating": true,
              "color": "white",
              "hidesWhenStopped": true,
              "size": "small",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
      null,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "backgroundColor": "#95012b",
                "borderRadius": 100,
                "height": 100,
                "justifyContent": "center",
                "paddingHorizontal": 170,
                "position": "absolute",
                "top": 8,
                "width": 612,
              }
            }
          />,
          <TouchableWithoutFeedback
            accessibilityLabel="enabled"
            onPressIn={[Function]}
            onPressOut={[Function]}
          >
            <View
              style={
                Object {
                  "backgroundColor": "#e20177",
                  "borderRadius": 100,
                  "height": 100,
                  "justifyContent": "center",
                  "width": 612,
                }
              }
            >
              <ActivityIndicator
                animating={true}
                color="white"
                hidesWhenStopped={true}
                size="small"
              />
            </View>
          </TouchableWithoutFeedback>,
          null,
        ],
        "style": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": null,
            "style": Object {
              "backgroundColor": "#95012b",
              "borderRadius": 100,
              "height": 100,
              "justifyContent": "center",
              "paddingHorizontal": 170,
              "position": "absolute",
              "top": 8,
              "width": 612,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessibilityLabel": "enabled",
            "children": <View
              style={
                Object {
                  "backgroundColor": "#e20177",
                  "borderRadius": 100,
                  "height": 100,
                  "justifyContent": "center",
                  "width": 612,
                }
              }
            >
              <ActivityIndicator
                animating={true}
                color="white"
                hidesWhenStopped={true}
                size="small"
              />
            </View>,
            "disabled": undefined,
            "onPressIn": [Function],
            "onPressOut": [Function],
            "testID": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <ActivityIndicator
                animating={true}
                color="white"
                hidesWhenStopped={true}
                size="small"
              />,
              "style": Object {
                "backgroundColor": "#e20177",
                "borderRadius": 100,
                "height": 100,
                "justifyContent": "center",
                "width": 612,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "animating": true,
                "color": "white",
                "hidesWhenStopped": true,
                "size": "small",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
        null,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Button should render a primary medium button  1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    isLoading={true}
    label="test"
    onPress={[MockFunction]}
    type="PrimaryMedium"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <View
          style={
            Object {
              "backgroundColor": "#95012b",
              "borderRadius": 100,
              "height": 100,
              "justifyContent": "center",
              "paddingHorizontal": 170,
              "position": "absolute",
              "top": 6,
              "width": 420,
            }
          }
        />,
        <TouchableWithoutFeedback
          accessibilityLabel="enabled"
          onPressIn={[Function]}
          onPressOut={[Function]}
        >
          <View
            style={
              Object {
                "backgroundColor": "#e20177",
                "borderRadius": 100,
                "height": 100,
                "justifyContent": "center",
                "shadowOffset": Object {
                  "height": 6,
                },
                "width": 420,
              }
            }
          >
            <ActivityIndicator
              animating={true}
              color="white"
              hidesWhenStopped={true}
              size="small"
            />
          </View>
        </TouchableWithoutFeedback>,
        null,
      ],
      "style": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": null,
          "style": Object {
            "backgroundColor": "#95012b",
            "borderRadius": 100,
            "height": 100,
            "justifyContent": "center",
            "paddingHorizontal": 170,
            "position": "absolute",
            "top": 6,
            "width": 420,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "accessibilityLabel": "enabled",
          "children": <View
            style={
              Object {
                "backgroundColor": "#e20177",
                "borderRadius": 100,
                "height": 100,
                "justifyContent": "center",
                "shadowOffset": Object {
                  "height": 6,
                },
                "width": 420,
              }
            }
          >
            <ActivityIndicator
              animating={true}
              color="white"
              hidesWhenStopped={true}
              size="small"
            />
          </View>,
          "disabled": undefined,
          "onPressIn": [Function],
          "onPressOut": [Function],
          "testID": undefined,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <ActivityIndicator
              animating={true}
              color="white"
              hidesWhenStopped={true}
              size="small"
            />,
            "style": Object {
              "backgroundColor": "#e20177",
              "borderRadius": 100,
              "height": 100,
              "justifyContent": "center",
              "shadowOffset": Object {
                "height": 6,
              },
              "width": 420,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "animating": true,
              "color": "white",
              "hidesWhenStopped": true,
              "size": "small",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
      null,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "backgroundColor": "#95012b",
                "borderRadius": 100,
                "height": 100,
                "justifyContent": "center",
                "paddingHorizontal": 170,
                "position": "absolute",
                "top": 6,
                "width": 420,
              }
            }
          />,
          <TouchableWithoutFeedback
            accessibilityLabel="enabled"
            onPressIn={[Function]}
            onPressOut={[Function]}
          >
            <View
              style={
                Object {
                  "backgroundColor": "#e20177",
                  "borderRadius": 100,
                  "height": 100,
                  "justifyContent": "center",
                  "shadowOffset": Object {
                    "height": 6,
                  },
                  "width": 420,
                }
              }
            >
              <ActivityIndicator
                animating={true}
                color="white"
                hidesWhenStopped={true}
                size="small"
              />
            </View>
          </TouchableWithoutFeedback>,
          null,
        ],
        "style": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": null,
            "style": Object {
              "backgroundColor": "#95012b",
              "borderRadius": 100,
              "height": 100,
              "justifyContent": "center",
              "paddingHorizontal": 170,
              "position": "absolute",
              "top": 6,
              "width": 420,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessibilityLabel": "enabled",
            "children": <View
              style={
                Object {
                  "backgroundColor": "#e20177",
                  "borderRadius": 100,
                  "height": 100,
                  "justifyContent": "center",
                  "shadowOffset": Object {
                    "height": 6,
                  },
                  "width": 420,
                }
              }
            >
              <ActivityIndicator
                animating={true}
                color="white"
                hidesWhenStopped={true}
                size="small"
              />
            </View>,
            "disabled": undefined,
            "onPressIn": [Function],
            "onPressOut": [Function],
            "testID": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <ActivityIndicator
                animating={true}
                color="white"
                hidesWhenStopped={true}
                size="small"
              />,
              "style": Object {
                "backgroundColor": "#e20177",
                "borderRadius": 100,
                "height": 100,
                "justifyContent": "center",
                "shadowOffset": Object {
                  "height": 6,
                },
                "width": 420,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "animating": true,
                "color": "white",
                "hidesWhenStopped": true,
                "size": "small",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
        null,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Button should render a secondary medium button  1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    label="test"
    onPress={[MockFunction]}
    type="SecondaryMedium"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "activeOpacity": 0.6,
      "children": <Text
        style={
          Object {
            "color": "rgb(226,1,119)",
            "fontFamily": "Bariol-Regular",
            "fontSize": 32,
            "lineHeight": 80,
            "textAlign": "center",
          }
        }
      >
        test
      </Text>,
      "disabled": undefined,
      "onPress": [MockFunction],
      "style": Object {
        "borderColor": "rgb(226,1,119)",
        "borderRadius": 100,
        "borderWidth": 2,
        "height": 100,
        "justifyContent": "center",
        "shadowOffset": Object {
          "height": 6,
        },
        "width": 420,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": "test",
        "style": Object {
          "color": "rgb(226,1,119)",
          "fontFamily": "Bariol-Regular",
          "fontSize": 32,
          "lineHeight": 80,
          "textAlign": "center",
        },
      },
      "ref": null,
      "rendered": "test",
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeOpacity": 0.6,
        "children": <Text
          style={
            Object {
              "color": "rgb(226,1,119)",
              "fontFamily": "Bariol-Regular",
              "fontSize": 32,
              "lineHeight": 80,
              "textAlign": "center",
            }
          }
        >
          test
        </Text>,
        "disabled": undefined,
        "onPress": [MockFunction],
        "style": Object {
          "borderColor": "rgb(226,1,119)",
          "borderRadius": 100,
          "borderWidth": 2,
          "height": 100,
          "justifyContent": "center",
          "shadowOffset": Object {
            "height": 6,
          },
          "width": 420,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "test",
          "style": Object {
            "color": "rgb(226,1,119)",
            "fontFamily": "Bariol-Regular",
            "fontSize": 32,
            "lineHeight": 80,
            "textAlign": "center",
          },
        },
        "ref": null,
        "rendered": "test",
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Button should render link button 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    label="test"
    onPress={[MockFunction]}
    type="Link"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "activeOpacity": 0.6,
      "children": <Text
        style={
          Object {
            "color": "rgb(232, 49, 129)",
            "fontFamily": "Bariol-Regular",
            "fontSize": 32,
            "lineHeight": 46,
            "textAlign": "center",
          }
        }
      >
        test
      </Text>,
      "disabled": undefined,
      "onPress": [MockFunction],
      "style": Object {
        "borderRadius": 100,
        "height": 100,
        "justifyContent": "center",
        "width": 612,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": "test",
        "style": Object {
          "color": "rgb(232, 49, 129)",
          "fontFamily": "Bariol-Regular",
          "fontSize": 32,
          "lineHeight": 46,
          "textAlign": "center",
        },
      },
      "ref": null,
      "rendered": "test",
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeOpacity": 0.6,
        "children": <Text
          style={
            Object {
              "color": "rgb(232, 49, 129)",
              "fontFamily": "Bariol-Regular",
              "fontSize": 32,
              "lineHeight": 46,
              "textAlign": "center",
            }
          }
        >
          test
        </Text>,
        "disabled": undefined,
        "onPress": [MockFunction],
        "style": Object {
          "borderRadius": 100,
          "height": 100,
          "justifyContent": "center",
          "width": 612,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "test",
          "style": Object {
            "color": "rgb(232, 49, 129)",
            "fontFamily": "Bariol-Regular",
            "fontSize": 32,
            "lineHeight": 46,
            "textAlign": "center",
          },
        },
        "ref": null,
        "rendered": "test",
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Button should render primary button 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    label="test"
    onPress={[MockFunction]}
    type="Primary"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <View
          style={
            Object {
              "backgroundColor": "#95012b",
              "borderRadius": 100,
              "height": 100,
              "justifyContent": "center",
              "paddingHorizontal": 170,
              "position": "absolute",
              "top": 8,
              "width": 612,
            }
          }
        />,
        <TouchableWithoutFeedback
          accessibilityLabel="enabled"
          onPressIn={[Function]}
          onPressOut={[Function]}
        >
          <View
            style={
              Object {
                "backgroundColor": "#e20177",
                "borderRadius": 100,
                "height": 100,
                "justifyContent": "center",
                "width": 612,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "white",
                  "fontFamily": "Bariol-Regular",
                  "fontSize": 36,
                  "lineHeight": 80,
                  "textAlign": "center",
                }
              }
            >
              test
            </Text>
          </View>
        </TouchableWithoutFeedback>,
        null,
      ],
      "style": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": null,
          "style": Object {
            "backgroundColor": "#95012b",
            "borderRadius": 100,
            "height": 100,
            "justifyContent": "center",
            "paddingHorizontal": 170,
            "position": "absolute",
            "top": 8,
            "width": 612,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "accessibilityLabel": "enabled",
          "children": <View
            style={
              Object {
                "backgroundColor": "#e20177",
                "borderRadius": 100,
                "height": 100,
                "justifyContent": "center",
                "width": 612,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "white",
                  "fontFamily": "Bariol-Regular",
                  "fontSize": 36,
                  "lineHeight": 80,
                  "textAlign": "center",
                }
              }
            >
              test
            </Text>
          </View>,
          "disabled": undefined,
          "onPressIn": [Function],
          "onPressOut": [Function],
          "testID": undefined,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Text
              style={
                Object {
                  "color": "white",
                  "fontFamily": "Bariol-Regular",
                  "fontSize": 36,
                  "lineHeight": 80,
                  "textAlign": "center",
                }
              }
            >
              test
            </Text>,
            "style": Object {
              "backgroundColor": "#e20177",
              "borderRadius": 100,
              "height": 100,
              "justifyContent": "center",
              "width": 612,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "test",
              "style": Object {
                "color": "white",
                "fontFamily": "Bariol-Regular",
                "fontSize": 36,
                "lineHeight": 80,
                "textAlign": "center",
              },
            },
            "ref": null,
            "rendered": "test",
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
      null,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "backgroundColor": "#95012b",
                "borderRadius": 100,
                "height": 100,
                "justifyContent": "center",
                "paddingHorizontal": 170,
                "position": "absolute",
                "top": 8,
                "width": 612,
              }
            }
          />,
          <TouchableWithoutFeedback
            accessibilityLabel="enabled"
            onPressIn={[Function]}
            onPressOut={[Function]}
          >
            <View
              style={
                Object {
                  "backgroundColor": "#e20177",
                  "borderRadius": 100,
                  "height": 100,
                  "justifyContent": "center",
                  "width": 612,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "white",
                    "fontFamily": "Bariol-Regular",
                    "fontSize": 36,
                    "lineHeight": 80,
                    "textAlign": "center",
                  }
                }
              >
                test
              </Text>
            </View>
          </TouchableWithoutFeedback>,
          null,
        ],
        "style": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": null,
            "style": Object {
              "backgroundColor": "#95012b",
              "borderRadius": 100,
              "height": 100,
              "justifyContent": "center",
              "paddingHorizontal": 170,
              "position": "absolute",
              "top": 8,
              "width": 612,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessibilityLabel": "enabled",
            "children": <View
              style={
                Object {
                  "backgroundColor": "#e20177",
                  "borderRadius": 100,
                  "height": 100,
                  "justifyContent": "center",
                  "width": 612,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "white",
                    "fontFamily": "Bariol-Regular",
                    "fontSize": 36,
                    "lineHeight": 80,
                    "textAlign": "center",
                  }
                }
              >
                test
              </Text>
            </View>,
            "disabled": undefined,
            "onPressIn": [Function],
            "onPressOut": [Function],
            "testID": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Text
                style={
                  Object {
                    "color": "white",
                    "fontFamily": "Bariol-Regular",
                    "fontSize": 36,
                    "lineHeight": 80,
                    "textAlign": "center",
                  }
                }
              >
                test
              </Text>,
              "style": Object {
                "backgroundColor": "#e20177",
                "borderRadius": 100,
                "height": 100,
                "justifyContent": "center",
                "width": 612,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "test",
                "style": Object {
                  "color": "white",
                  "fontFamily": "Bariol-Regular",
                  "fontSize": 36,
                  "lineHeight": 80,
                  "textAlign": "center",
                },
              },
              "ref": null,
              "rendered": "test",
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
        null,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Button should render primary button as disabled 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    disabled={true}
    label="test"
    onPress={[MockFunction]}
    type="Primary"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <View
          style={
            Object {
              "backgroundColor": "#95012b",
              "borderRadius": 100,
              "height": 100,
              "justifyContent": "center",
              "paddingHorizontal": 170,
              "position": "absolute",
              "top": 8,
              "width": 612,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "rgba(255,255,255,0.8)",
                "borderRadius": 100,
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </View>,
        <TouchableWithoutFeedback
          accessibilityLabel="disabled"
          disabled={true}
          onPressIn={[Function]}
          onPressOut={[Function]}
        >
          <View
            style={
              Object {
                "backgroundColor": "#e20177",
                "borderRadius": 100,
                "height": 100,
                "justifyContent": "center",
                "width": 612,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "white",
                  "fontFamily": "Bariol-Regular",
                  "fontSize": 36,
                  "lineHeight": 80,
                  "textAlign": "center",
                }
              }
            >
              test
            </Text>
          </View>
        </TouchableWithoutFeedback>,
        <View
          style={
            Object {
              "backgroundColor": "rgba(255,255,255,0.8)",
              "borderRadius": 100,
              "bottom": 0,
              "height": 100,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />,
      ],
      "style": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <View
            style={
              Object {
                "backgroundColor": "rgba(255,255,255,0.8)",
                "borderRadius": 100,
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />,
          "style": Object {
            "backgroundColor": "#95012b",
            "borderRadius": 100,
            "height": 100,
            "justifyContent": "center",
            "paddingHorizontal": 170,
            "position": "absolute",
            "top": 8,
            "width": 612,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "style": Object {
              "backgroundColor": "rgba(255,255,255,0.8)",
              "borderRadius": 100,
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "accessibilityLabel": "disabled",
          "children": <View
            style={
              Object {
                "backgroundColor": "#e20177",
                "borderRadius": 100,
                "height": 100,
                "justifyContent": "center",
                "width": 612,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "white",
                  "fontFamily": "Bariol-Regular",
                  "fontSize": 36,
                  "lineHeight": 80,
                  "textAlign": "center",
                }
              }
            >
              test
            </Text>
          </View>,
          "disabled": true,
          "onPressIn": [Function],
          "onPressOut": [Function],
          "testID": undefined,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Text
              style={
                Object {
                  "color": "white",
                  "fontFamily": "Bariol-Regular",
                  "fontSize": 36,
                  "lineHeight": 80,
                  "textAlign": "center",
                }
              }
            >
              test
            </Text>,
            "style": Object {
              "backgroundColor": "#e20177",
              "borderRadius": 100,
              "height": 100,
              "justifyContent": "center",
              "width": 612,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "test",
              "style": Object {
                "color": "white",
                "fontFamily": "Bariol-Regular",
                "fontSize": 36,
                "lineHeight": 80,
                "textAlign": "center",
              },
            },
            "ref": null,
            "rendered": "test",
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "style": Object {
            "backgroundColor": "rgba(255,255,255,0.8)",
            "borderRadius": 100,
            "bottom": 0,
            "height": 100,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "backgroundColor": "#95012b",
                "borderRadius": 100,
                "height": 100,
                "justifyContent": "center",
                "paddingHorizontal": 170,
                "position": "absolute",
                "top": 8,
                "width": 612,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "rgba(255,255,255,0.8)",
                  "borderRadius": 100,
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            />
          </View>,
          <TouchableWithoutFeedback
            accessibilityLabel="disabled"
            disabled={true}
            onPressIn={[Function]}
            onPressOut={[Function]}
          >
            <View
              style={
                Object {
                  "backgroundColor": "#e20177",
                  "borderRadius": 100,
                  "height": 100,
                  "justifyContent": "center",
                  "width": 612,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "white",
                    "fontFamily": "Bariol-Regular",
                    "fontSize": 36,
                    "lineHeight": 80,
                    "textAlign": "center",
                  }
                }
              >
                test
              </Text>
            </View>
          </TouchableWithoutFeedback>,
          <View
            style={
              Object {
                "backgroundColor": "rgba(255,255,255,0.8)",
                "borderRadius": 100,
                "bottom": 0,
                "height": 100,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />,
        ],
        "style": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <View
              style={
                Object {
                  "backgroundColor": "rgba(255,255,255,0.8)",
                  "borderRadius": 100,
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            />,
            "style": Object {
              "backgroundColor": "#95012b",
              "borderRadius": 100,
              "height": 100,
              "justifyContent": "center",
              "paddingHorizontal": 170,
              "position": "absolute",
              "top": 8,
              "width": 612,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "style": Object {
                "backgroundColor": "rgba(255,255,255,0.8)",
                "borderRadius": 100,
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessibilityLabel": "disabled",
            "children": <View
              style={
                Object {
                  "backgroundColor": "#e20177",
                  "borderRadius": 100,
                  "height": 100,
                  "justifyContent": "center",
                  "width": 612,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "white",
                    "fontFamily": "Bariol-Regular",
                    "fontSize": 36,
                    "lineHeight": 80,
                    "textAlign": "center",
                  }
                }
              >
                test
              </Text>
            </View>,
            "disabled": true,
            "onPressIn": [Function],
            "onPressOut": [Function],
            "testID": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Text
                style={
                  Object {
                    "color": "white",
                    "fontFamily": "Bariol-Regular",
                    "fontSize": 36,
                    "lineHeight": 80,
                    "textAlign": "center",
                  }
                }
              >
                test
              </Text>,
              "style": Object {
                "backgroundColor": "#e20177",
                "borderRadius": 100,
                "height": 100,
                "justifyContent": "center",
                "width": 612,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "test",
                "style": Object {
                  "color": "white",
                  "fontFamily": "Bariol-Regular",
                  "fontSize": 36,
                  "lineHeight": 80,
                  "textAlign": "center",
                },
              },
              "ref": null,
              "rendered": "test",
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "style": Object {
              "backgroundColor": "rgba(255,255,255,0.8)",
              "borderRadius": 100,
              "bottom": 0,
              "height": 100,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Button should render primary button on Android 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    label="test"
    onPress={[MockFunction]}
    type="Primary"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <View
          style={
            Object {
              "backgroundColor": "#95012b",
              "borderRadius": 100,
              "height": 100,
              "justifyContent": "center",
              "paddingHorizontal": 170,
              "position": "absolute",
              "top": 8,
              "width": 612,
            }
          }
        />,
        <TouchableWithoutFeedback
          accessibilityLabel="enabled"
          onPressIn={[Function]}
          onPressOut={[Function]}
        >
          <View
            style={
              Object {
                "backgroundColor": "#e20177",
                "borderRadius": 100,
                "height": 100,
                "justifyContent": "center",
                "width": 612,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "white",
                  "fontFamily": "Bariol-Regular",
                  "fontSize": 36,
                  "lineHeight": 80,
                  "textAlign": "center",
                }
              }
            >
              test
            </Text>
          </View>
        </TouchableWithoutFeedback>,
        null,
      ],
      "style": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": null,
          "style": Object {
            "backgroundColor": "#95012b",
            "borderRadius": 100,
            "height": 100,
            "justifyContent": "center",
            "paddingHorizontal": 170,
            "position": "absolute",
            "top": 8,
            "width": 612,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "accessibilityLabel": "enabled",
          "children": <View
            style={
              Object {
                "backgroundColor": "#e20177",
                "borderRadius": 100,
                "height": 100,
                "justifyContent": "center",
                "width": 612,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "white",
                  "fontFamily": "Bariol-Regular",
                  "fontSize": 36,
                  "lineHeight": 80,
                  "textAlign": "center",
                }
              }
            >
              test
            </Text>
          </View>,
          "disabled": undefined,
          "onPressIn": [Function],
          "onPressOut": [Function],
          "testID": undefined,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Text
              style={
                Object {
                  "color": "white",
                  "fontFamily": "Bariol-Regular",
                  "fontSize": 36,
                  "lineHeight": 80,
                  "textAlign": "center",
                }
              }
            >
              test
            </Text>,
            "style": Object {
              "backgroundColor": "#e20177",
              "borderRadius": 100,
              "height": 100,
              "justifyContent": "center",
              "width": 612,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "test",
              "style": Object {
                "color": "white",
                "fontFamily": "Bariol-Regular",
                "fontSize": 36,
                "lineHeight": 80,
                "textAlign": "center",
              },
            },
            "ref": null,
            "rendered": "test",
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
      null,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "backgroundColor": "#95012b",
                "borderRadius": 100,
                "height": 100,
                "justifyContent": "center",
                "paddingHorizontal": 170,
                "position": "absolute",
                "top": 8,
                "width": 612,
              }
            }
          />,
          <TouchableWithoutFeedback
            accessibilityLabel="enabled"
            onPressIn={[Function]}
            onPressOut={[Function]}
          >
            <View
              style={
                Object {
                  "backgroundColor": "#e20177",
                  "borderRadius": 100,
                  "height": 100,
                  "justifyContent": "center",
                  "width": 612,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "white",
                    "fontFamily": "Bariol-Regular",
                    "fontSize": 36,
                    "lineHeight": 80,
                    "textAlign": "center",
                  }
                }
              >
                test
              </Text>
            </View>
          </TouchableWithoutFeedback>,
          null,
        ],
        "style": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": null,
            "style": Object {
              "backgroundColor": "#95012b",
              "borderRadius": 100,
              "height": 100,
              "justifyContent": "center",
              "paddingHorizontal": 170,
              "position": "absolute",
              "top": 8,
              "width": 612,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessibilityLabel": "enabled",
            "children": <View
              style={
                Object {
                  "backgroundColor": "#e20177",
                  "borderRadius": 100,
                  "height": 100,
                  "justifyContent": "center",
                  "width": 612,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "white",
                    "fontFamily": "Bariol-Regular",
                    "fontSize": 36,
                    "lineHeight": 80,
                    "textAlign": "center",
                  }
                }
              >
                test
              </Text>
            </View>,
            "disabled": undefined,
            "onPressIn": [Function],
            "onPressOut": [Function],
            "testID": undefined,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Text
                style={
                  Object {
                    "color": "white",
                    "fontFamily": "Bariol-Regular",
                    "fontSize": 36,
                    "lineHeight": 80,
                    "textAlign": "center",
                  }
                }
              >
                test
              </Text>,
              "style": Object {
                "backgroundColor": "#e20177",
                "borderRadius": 100,
                "height": 100,
                "justifyContent": "center",
                "width": 612,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "test",
                "style": Object {
                  "color": "white",
                  "fontFamily": "Bariol-Regular",
                  "fontSize": 36,
                  "lineHeight": 80,
                  "textAlign": "center",
                },
              },
              "ref": null,
              "rendered": "test",
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
        null,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Button should render secondary button 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    label="test"
    onPress={[MockFunction]}
    type="Secondary"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "activeOpacity": 0.6,
      "children": <Text
        style={
          Object {
            "color": "rgb(226,1,119)",
            "fontFamily": "Bariol-Regular",
            "fontSize": 36,
            "lineHeight": 80,
            "textAlign": "center",
          }
        }
      >
        test
      </Text>,
      "disabled": undefined,
      "onPress": [MockFunction],
      "style": Object {
        "borderColor": "rgb(226,1,119)",
        "borderRadius": 100,
        "borderWidth": 2,
        "height": 100,
        "justifyContent": "center",
        "width": 612,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": "test",
        "style": Object {
          "color": "rgb(226,1,119)",
          "fontFamily": "Bariol-Regular",
          "fontSize": 36,
          "lineHeight": 80,
          "textAlign": "center",
        },
      },
      "ref": null,
      "rendered": "test",
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeOpacity": 0.6,
        "children": <Text
          style={
            Object {
              "color": "rgb(226,1,119)",
              "fontFamily": "Bariol-Regular",
              "fontSize": 36,
              "lineHeight": 80,
              "textAlign": "center",
            }
          }
        >
          test
        </Text>,
        "disabled": undefined,
        "onPress": [MockFunction],
        "style": Object {
          "borderColor": "rgb(226,1,119)",
          "borderRadius": 100,
          "borderWidth": 2,
          "height": 100,
          "justifyContent": "center",
          "width": 612,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "test",
          "style": Object {
            "color": "rgb(226,1,119)",
            "fontFamily": "Bariol-Regular",
            "fontSize": 36,
            "lineHeight": 80,
            "textAlign": "center",
          },
        },
        "ref": null,
        "rendered": "test",
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
